--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -4,7 +4,7 @@
   "port": 5432,
   "username": "postgres",
   "password": "docker",
-  "database": "gostack_goFinances",
+  "database": "gostack_gofinances",
   "entities": ["./src/models/*.ts"],
   "migrations": ["./src/database/migrations/*.ts"],
   "cli": {
